--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "python.linting.enabled": true,
     "python.linting.flake8Enabled": true,
-    "python.pythonPath": "~/.pyenv/versions/3.6.6/bin/python",
+    "python.pythonPath": "/home/tomd/.pyenv/versions/3.8.0/bin/python",
     "python.testing.pytestArgs": [
         "."
     ],
